--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,8 +1,7 @@
-name: CI
+name: ProcessingLists
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "08 * * * *"
 
 jobs:
   generate:
