--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,7 +1,7 @@
 name: ProcessingLists
 on:
   schedule:
-    - cron: "08 * * * *"
+    - cron: "*/30 * * * *"
 
 jobs:
   generate:
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 18.x
       - run: node writeFile.js 
